fixed layout issuse with horizontal scroll being needed  because excessive space was being used

--- a/fastfoodie-app/src/components/RestrauntCard/style.css
+++ b/fastfoodie-app/src/components/RestrauntCard/style.css
@@ -1,6 +1,6 @@
 .outer-card-body{
   border: 1px solid black;
-  width: 100%;
+  width:99%;
 }
  .card-one ,.card-two ,.card-three {
   border: 1px solid black;
