--- a/fastfoodie-app/src/components/SignUp/style.css
+++ b/fastfoodie-app/src/components/SignUp/style.css
@@ -2,4 +2,5 @@
   position: relative;
     bottom: 36px;
     left: 90%;
+    width: 112px;
 }
